--- a/test-output/index.html
+++ b/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,22 +103,32 @@
                     <div class="method-list-content passed suite-ParaBankingSuite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-ParaBankingSuite" title="testCases.TC003_OpenNewAccountTest" class="method navigator-link" hash-for-method="OpenCheckingAccountTest">OpenCheckingAccountTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-ParaBankingSuite" title="testCases.TC004_TransferFundsTest" class="method navigator-link" hash-for-method="TransferFundsWithAmountTest">TransferFundsWithAmountTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-ParaBankingSuite" title="testCases.TC003_OpenNewAccountTest" class="method navigator-link" hash-for-method="OpenNewAccountTest">OpenNewAccountTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-ParaBankingSuite" title="testCases.TC004_TransferFundsTest" class="method navigator-link" hash-for-method="TransferFundsWithDecimalAmountTest">TransferFundsWithDecimalAmountTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-ParaBankingSuite" title="testCases.TC003_OpenNewAccountTest" class="method navigator-link" hash-for-method="VerifyAccountDetailsNavigationTest">VerifyAccountDetailsNavigationTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-ParaBankingSuite" title="testCases.TC004_TransferFundsTest" class="method navigator-link" hash-for-method="TransferFundsWithExcessiveAmountTest">TransferFundsWithExcessiveAmountTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-ParaBankingSuite" title="testCases.TC003_OpenNewAccountTest" class="method navigator-link" hash-for-method="VerifyBackButtonAfterAccountCreationTest">VerifyBackButtonAfterAccountCreationTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-ParaBankingSuite" title="testCases.TC004_TransferFundsTest" class="method navigator-link" hash-for-method="TransferFundsWithInvalidAmountTest">TransferFundsWithInvalidAmountTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-ParaBankingSuite" title="testCases.TC004_TransferFundsTest" class="method navigator-link" hash-for-method="TransferFundsWithSpecialCharactersTest">TransferFundsWithSpecialCharactersTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-ParaBankingSuite" title="testCases.TC004_TransferFundsTest" class="method navigator-link" hash-for-method="TransferFundsWithoutAmountTest">TransferFundsWithoutAmountTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-ParaBankingSuite -->
@@ -136,35 +146,49 @@
           <div class="suite-ParaBankingSuite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testCases.TC003_OpenNewAccountTest</span>
+              <span class="class-name">testCases.TC004_TransferFundsTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="OpenCheckingAccountTest">
-                  </a> <!-- OpenCheckingAccountTest -->
-                  <span class="method-name">OpenCheckingAccountTest</span>
+                  <a name="TransferFundsWithAmountTest">
+                  </a> <!-- TransferFundsWithAmountTest -->
+                  <span class="method-name">TransferFundsWithAmountTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="OpenNewAccountTest">
-                  </a> <!-- OpenNewAccountTest -->
-                  <span class="method-name">OpenNewAccountTest</span>
+                  <a name="TransferFundsWithDecimalAmountTest">
+                  </a> <!-- TransferFundsWithDecimalAmountTest -->
+                  <span class="method-name">TransferFundsWithDecimalAmountTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="VerifyAccountDetailsNavigationTest">
-                  </a> <!-- VerifyAccountDetailsNavigationTest -->
-                  <span class="method-name">VerifyAccountDetailsNavigationTest</span>
+                  <a name="TransferFundsWithExcessiveAmountTest">
+                  </a> <!-- TransferFundsWithExcessiveAmountTest -->
+                  <span class="method-name">TransferFundsWithExcessiveAmountTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="VerifyBackButtonAfterAccountCreationTest">
-                  </a> <!-- VerifyBackButtonAfterAccountCreationTest -->
-                  <span class="method-name">VerifyBackButtonAfterAccountCreationTest</span>
+                  <a name="TransferFundsWithInvalidAmountTest">
+                  </a> <!-- TransferFundsWithInvalidAmountTest -->
+                  <span class="method-name">TransferFundsWithInvalidAmountTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="TransferFundsWithSpecialCharactersTest">
+                  </a> <!-- TransferFundsWithSpecialCharactersTest -->
+                  <span class="method-name">TransferFundsWithSpecialCharactersTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="TransferFundsWithoutAmountTest">
+                  </a> <!-- TransferFundsWithoutAmountTest -->
+                  <span class="method-name">TransferFundsWithoutAmountTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -186,7 +210,7 @@
     &lt;parameter name=&quot;os&quot; value=&quot;Windows&quot;/&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testCases.TC003_OpenNewAccountTest&quot;/&gt;
+      &lt;class name=&quot;testCases.TC004_TransferFundsTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- ParaBanking Test --&gt;
 &lt;/suite&gt; &lt;!-- ParaBankingSuite --&gt;
@@ -214,19 +238,7 @@
               <span class="test-group-name">Functional</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">OpenCheckingAccountTest</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">OpenNewAccountTest</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">VerifyAccountDetailsNavigationTest</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">VerifyBackButtonAfterAccountCreationTest</span>
+                <span class="method-in-group-name">TransferFundsWithDecimalAmountTest</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -234,19 +246,27 @@
               <span class="test-group-name">Master</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">OpenNewAccountTest</span>
+                <span class="method-in-group-name">TransferFundsWithAmountTest</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
             <div class="test-group">
-              <span class="test-group-name">Regression</span>
+              <span class="test-group-name">Negative</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">VerifyAccountDetailsNavigationTest</span>
+                <span class="method-in-group-name">TransferFundsWithExcessiveAmountTest</span>
                 <br/>
               </div> <!-- method-in-group -->
               <div class="method-in-group">
-                <span class="method-in-group-name">VerifyBackButtonAfterAccountCreationTest</span>
+                <span class="method-in-group-name">TransferFundsWithInvalidAmountTest</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">TransferFundsWithSpecialCharactersTest</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">TransferFundsWithoutAmountTest</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -254,7 +274,11 @@
               <span class="test-group-name">Sanity</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">OpenCheckingAccountTest</span>
+                <span class="method-in-group-name">TransferFundsWithAmountTest</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">TransferFundsWithDecimalAmountTest</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -274,28 +298,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'VerifyAccountDetailsNavigationTest')
-data.setCell(0, 2, 'testCases.TC003_OpenNewAccountTest')
-data.setCell(0, 3, 8964);
+data.setCell(0, 1, 'TransferFundsWithAmountTest')
+data.setCell(0, 2, 'testCases.TC004_TransferFundsTest')
+data.setCell(0, 3, 13557);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'OpenCheckingAccountTest')
-data.setCell(1, 2, 'testCases.TC003_OpenNewAccountTest')
-data.setCell(1, 3, 8665);
+data.setCell(1, 1, 'TransferFundsWithInvalidAmountTest')
+data.setCell(1, 2, 'testCases.TC004_TransferFundsTest')
+data.setCell(1, 3, 6190);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'VerifyBackButtonAfterAccountCreationTest')
-data.setCell(2, 2, 'testCases.TC003_OpenNewAccountTest')
-data.setCell(2, 3, 8589);
+data.setCell(2, 1, 'TransferFundsWithDecimalAmountTest')
+data.setCell(2, 2, 'testCases.TC004_TransferFundsTest')
+data.setCell(2, 3, 6137);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'OpenNewAccountTest')
-data.setCell(3, 2, 'testCases.TC003_OpenNewAccountTest')
-data.setCell(3, 3, 6272);
+data.setCell(3, 1, 'TransferFundsWithoutAmountTest')
+data.setCell(3, 2, 'testCases.TC004_TransferFundsTest')
+data.setCell(3, 3, 6127);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'TransferFundsWithSpecialCharactersTest')
+data.setCell(4, 2, 'testCases.TC004_TransferFundsTest')
+data.setCell(4, 3, 6111);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'TransferFundsWithExcessiveAmountTest')
+data.setCell(5, 2, 'testCases.TC004_TransferFundsTest')
+data.setCell(5, 3, 2997);
 window.suiteTableData['ParaBankingSuite']= { tableData: data, tableDiv: 'times-div-ParaBankingSuite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 32 seconds</span>
+              <span class="suite-total-time">Total running time: 41 seconds</span>
               <div id="times-div-ParaBankingSuite">
               </div> <!-- times-div-ParaBankingSuite -->
             </div> <!-- times-div -->
@@ -321,30 +353,38 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCases.TC003_OpenNewAccountTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCases.TC004_TransferFundsTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup(Windows, chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">OpenNewAccountTest</span>
-                <span class="method-start">3600 ms</span>
+                <span class="method-name">TransferFundsWithAmountTest</span>
+                <span class="method-start">2486 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">OpenCheckingAccountTest</span>
-                <span class="method-start">9913 ms</span>
+                <span class="method-name">TransferFundsWithoutAmountTest</span>
+                <span class="method-start">16087 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">VerifyAccountDetailsNavigationTest</span>
-                <span class="method-start">18594 ms</span>
+                <span class="method-name">TransferFundsWithInvalidAmountTest</span>
+                <span class="method-start">22217 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">VerifyBackButtonAfterAccountCreationTest</span>
-                <span class="method-start">27563 ms</span>
+                <span class="method-name">TransferFundsWithDecimalAmountTest</span>
+                <span class="method-start">28412 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">TransferFundsWithSpecialCharactersTest</span>
+                <span class="method-start">34554 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">TransferFundsWithExcessiveAmountTest</span>
+                <span class="method-start">40671 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">36160 ms</span>
+                <span class="method-start">43673 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
